; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/desa68/extr_desa68.c_desa_immL.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/desa68/extr_desa68.c_desa_immL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@d = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@DESA68_SYMBOL_FLAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @desa_immL to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @desa_immL(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  store i32 %4, i32* %3, align 4
  %5 = call i32 @desa_char(i8 signext 35)
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 0), align 4
  %7 = load i32, i32* @DESA68_SYMBOL_FLAG, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %23

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 1), align 4
  %13 = icmp uge i32 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %10
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 2), align 4
  %17 = icmp ult i32 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %14
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @desa_label(i32 %19)
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @update_ea(i32 %21)
  br label %51

23:                                               ; preds = %14, %10, %1
  %24 = load i32, i32* %3, align 4
  %25 = call i64 @desa_isascii(i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %47

27:                                               ; preds = %23
  %28 = load i32, i32* %3, align 4
  %29 = lshr i32 %28, 8
  %30 = call i64 @desa_isascii(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %47

32:                                               ; preds = %27
  %33 = load i32, i32* %3, align 4
  %34 = lshr i32 %33, 16
  %35 = call i64 @desa_isascii(i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %47

37:                                               ; preds = %32
  %38 = load i32, i32* %3, align 4
  %39 = lshr i32 %38, 24
  %40 = call i64 @desa_isascii(i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %47

42:                                               ; preds = %37
  %43 = call i32 @desa_char(i8 signext 39)
  %44 = load i32, i32* %3, align 4
  %45 = call i32 @desa_ascii(i32 %44)
  %46 = call i32 @desa_char(i8 signext 39)
  br label %50

47:                                               ; preds = %37, %32, %27, %23
  %48 = load i32, i32* %2, align 4
  %49 = call i32 @desa_signifiant(i32 %48)
  br label %50

50:                                               ; preds = %47, %42
  br label %51

51:                                               ; preds = %50, %18
  ret void
}

declare dso_local i32 @desa_char(i8 signext) #1

declare dso_local i32 @desa_label(i32) #1

declare dso_local i32 @update_ea(i32) #1

declare dso_local i64 @desa_isascii(i32) #1

declare dso_local i32 @desa_ascii(i32) #1

declare dso_local i32 @desa_signifiant(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
